fix bug + style visible

--- a/app/src/main/resources/com/viespa/css/main.css
+++ b/app/src/main/resources/com/viespa/css/main.css
@@ -16,7 +16,7 @@
 }
 
 .container {
-    -fx-background-color: rgba(255, 255, 255, 0.2);
+    -fx-background-color: rgba(255, 255, 255, 0.4);
     -fx-background-radius: 20;
     -fx-effect: dropshadow(three-pass-box, -fx-color-dropshadow, 4, 0.1, 2, 2);
 }
@@ -31,11 +31,11 @@
     -fx-background-color: rgba(255, 255, 255, 0);
     -fx-opacity: 0.5;
     -fx-text-fill: linear-gradient(from 100.0% 25% to 100.0% 85%, -fx-color-button-1 0.0%, -fx-color-button-2 100.0%);
-    -fx-effect: dropshadow(three-pass-box, -fx-color-dropshadow, 8, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, -fx-color-dropshadow, 4, 0.1, 2, 2);
 }
 
 .button-sidebar:hover {
-    -fx-background-color: rgba(255, 255, 255, 0.2);
+    -fx-background-color: rgba(255, 255, 255, 0.5);
     -fx-opacity: 1;
     -fx-border-style: hidden hidden hidden solid;
     -fx-border-color: linear-gradient(from 100.0% 25% to 100.0% 85%, -fx-color-button-1 0.0%, -fx-color-button-2 100.0%);
@@ -44,7 +44,7 @@
 }
 
 .button-sidebar.active {
-    -fx-background-color: rgba(255, 255, 255, 0.2);
+    -fx-background-color: rgba(255, 255, 255, 0.5);
     -fx-opacity: 1 !important;
     -fx-border-style: hidden hidden hidden solid;
     -fx-border-color: linear-gradient(from 100.0% 25% to 100.0% 85%, -fx-color-button-1 0.0%, -fx-color-button-2 100.0%);
@@ -101,7 +101,7 @@
 .text-area,
 .date-picker,
 .choice-box {
-    -fx-background-color: rgba(255, 255, 255, 0.2);
+    -fx-background-color: rgba(255, 255, 255, 0.3);
     -fx-background-radius: 0;
     -fx-border-color: rgba(1, 1, 1, 0.2);
     -fx-border-style: hidden hidden solid hidden;
